--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.hubspot.dropwizard</groupId>
+            <artifactId>dropwizard-guice</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
